Fix display function and basic styling of display
Display function is working and some rudimentary table styling for now

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
+    <div class = "wrapper">
+        <table class = "book-display">
+            <tr>
+                <th>Name</th>
+                <th>Author</th>
+                <th>Status</th>
+            </tr>
+            <tbody id = "table-body"></tbody>
+        </table>
+    </div>
     <script src = "script.js"></script>
 </body>
 </html>
